# uk-bot

./: .gitignore  Dockerfile  Dockerfile.backup  docker-compose.yml  pyproject.toml  run.py
app/: helpers.py  logger.py  message_utils.py
app/admin/: __init__.py  acl.py  assemble.py  filters.py  refresh.py  router.py
app/admin/handlers/: admin.py  export_tickets.py  get_meter.py  post.py  send_meters_email.py
app/admin/keyboards/: admin_kb.py
app/backup/: __init__.py  backup_script.py  run_backup.sh  test_s3.py
app/group/: ticket_forum.py
app/services/: email_service.py  test_send_email_manual.py  ticket_notifications.py
app/tasks/: meter_export.py  meter_reminder.py
app/user/: __init__.py  assemble.py  router.py
app/user/handlers/: edit_profile.py  meter.py  registration.py  ticket.py  user.py
app/user/keyboards/: user_kb.py
app/user/middlewares/: check_subscription.py
app/user/utils/: profile.py  states.py  validators.py
app/utils/: email_sender.py
config/: settings.py
database/: export_queries.py  models.py  requests.py
