[project]
name = "uk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "aiogram-calendar>=0.6.0",
    "aiosqlite>=0.21.0",
    "boto3>=1.40.62",
    "openpyxl>=3.1.5",
    "python-decouple>=3.8",
    "pytz>=2025.2",
    "sqlalchemy>=2.0.44",
]
